--- a/modules/ROOT/pages/extensions/index.adoc
+++ b/modules/ROOT/pages/extensions/index.adoc
@@ -1,6 +1,6 @@
 == Extensions
 
-ownCloud Infinite Space functionality comes with a groing number of extenstions.
+ownCloud Infinite Space comes with a growing number of extensions.
 
 // Which are available at GA?
 
