--- a/modules/ROOT/pages/deployment/nfs.adoc
+++ b/modules/ROOT/pages/deployment/nfs.adoc
@@ -82,7 +82,7 @@ To use NFS for oCIS, you must use *NFSv4* for various reasons.
 
 == NFS Mount Options
 
-See the {man-nfs-ubuntu-url}[Ubuntu 20.04 man pages] for a detailed description of the NFS mount options. The following options are default for NFS except if explicitly set differently when mounting: `rw`, `suid`, `dev`, `exec`, `auto`, `nouser`, and `async`.
+See the {nfs-man-page-url}[man pages] for a detailed description of the NFS mount options. The following options are default for NFS except if explicitly set differently when mounting: `rw`, `suid`, `dev`, `exec`, `auto`, `nouser`, and `async`.
 
 === Mount Options to Consider
 
