--- a/modules/ROOT/pages/configuration/roles-permissions.adoc
+++ b/modules/ROOT/pages/configuration/roles-permissions.adoc
@@ -4,15 +4,17 @@
 
 :description: Like ownCloud server, oCIS distinguishes between regular users and the admin user with extended configuration and administration priviledges. However, with the new spaces concept, regular users can have different roles with different permissions for individual spaces.
 
+== Introduction
+
 {description}
 
-=== Available Roles and Permissions
+== Available Roles and Permissions
 
-==== Viewer
+=== Viewer
 
 Users with the role `viewer` for a certain space can only read documents, view images, play videos, etc., but not change anything.
 
-==== Editor
+=== Editor
 
 Editors of a space have additional permissions. They can:
 
@@ -23,7 +25,7 @@ Editors of a space have additional permissions. They can:
 * add or change the image for the space,
 * empty the trash bin of the space.
 
-==== Manager
+=== Manager
 
 In addition to the viewer and editor permissions, the manager can:
 
@@ -35,7 +37,7 @@ The creator of a space becomes manager and can delegate this role to another mem
 
 // Unclear if only Admin can create spaces or everyone.
 
-=== Admin
+== Admin
 
 The admin user is created during the setup of on oCIS instance. Check out the ownCloud Web section of the documention for details on all configuration options for admins.
 
@@ -45,6 +47,6 @@ TIP: It's a good idea to have two users in the manager role, in case one of them
 
 // Likely there will be a way for admins to change the roles, but we don't know yet for sure and how it will work.
 
-=== How to Map Roles and Permissions to Users?
+== How to Map Roles and Permissions to Users?
 
 (integrated IDM, external IDM)
